istio/istio-installation/ingress-tls-e2e.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress-application-gateway
  annotations:
     kubernetes.io/ingress.class: azure/application-gateway
     appgw.ingress.kubernetes.io/appgw-ssl-certificate: mykvsslcert
     appgw.ingress.kubernetes.io/ssl-redirect: "true"
     appgw.ingress.kubernetes.io/backend-protocol: "https"
     appgw.ingress.kubernetes.io/backend-hostname: "echoserver.echoserver.svc.cluster.local"
     appgw.ingress.kubernetes.io/appgw-trusted-root-certificate: "backend-tls"
     appgw.ingress.kubernetes.io/health-probe-hostname: "echoserver.echoserver.svc.cluster.local"
     appgw.ingress.kubernetes.io/health-probe-port: "8443"
     appgw.ingress.kubernetes.io/health-probe-path: "/"

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingressgateway
            port:
              number: 443
